--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:argType="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -47,12 +47,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/playerView"
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_height="@dimen/_200sdp"
+        app:layout_constraintTop_toBottomOf="@id/videoTitle"
+        app:resize_mode="fit"
+        app:show_buffering="when_playing"
+        app:show_subtitle_button="false"
+        app:use_controller="false"
+        app:use_artwork="true"
+        argType:show_next_button="false" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/allVideoSolutions"
-        app:layout_constraintTop_toBottomOf="@id/videoTitle"
+        app:layout_constraintTop_toBottomOf="@id/playerView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_24sdp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0dp"/>
 
     <ProgressBar
         android:id="@+id/progressBarBottomSheet"
