--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -4,6 +4,25 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/allVideoSolutions"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_24sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <ProgressBar
+        android:id="@+id/progressBarBottomSheet"
+        android:indeterminateTint="@color/black"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        app:layout_constraintBottom_toBottomOf="@id/allVideoSolutions"
+        app:layout_constraintTop_toTopOf="@id/allVideoSolutions"
+        app:layout_constraintStart_toStartOf="@id/allVideoSolutions"
+        app:layout_constraintEnd_toEndOf="@id/allVideoSolutions"/>
 
     <LinearLayout
         android:id="@+id/emptyLayout"
