--- a/app/src/main/res/layout/fragment_browser_home.xml
+++ b/app/src/main/res/layout/fragment_browser_home.xml
@@ -113,8 +113,7 @@
             android:horizontalSpacing="4dp"
             android:numColumns="4"
             android:padding="4dp"
-            android:verticalSpacing="4dp"
-            app:items="@{mainVModel.bookmarksList}" />
+            android:verticalSpacing="4dp"/>
 
 
         <LinearLayout
